# archlens

./: .archlens.yml  .cursorrules  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  pyproject.toml
action/: Dockerfile  action.yml  blast_radius.py  config_parser.py  context_writer.py  edge_noise_filter.py  entrypoint.py  graphify_adapter.py  violation_checker.py
cli/: __init__.py  main.py
context/: agents.md  brief.md  decisions.md  todo.md
mcp/: __init__.py  engine_bridge.py  server.py
shared/constants/: edge_types.py
shared/schemas/: __init__.py  config_schema.py  diff_schema.py  graph_schema.py  job_schema.py  violation_schema.py
spike/: SPIKE_REPORT.md  analyze_diff.py  debug_cache.py  diff_output.json  diff_output.txt  inspect_extraction.py  inspect_imports.py  raw_extraction.json  test_graphify.py  test_import_diff.py
spike/dummy_repo/: .archlens.yml
spike/dummy_repo/api/: __init__.py  middleware.py  routes.py
spike/dummy_repo/database/: __init__.py  connection.py  models.py
spike/dummy_repo/frontend/: __init__.py  components.py  views.py
spike/dummy_repo/services/: auth.py  payment.py
spike/dummy_repo/utils/: __init__.py  helpers.py
tasks/00_competitive_research/: prompt.md
tasks/01_spike/: prompt.md
tasks/02_schemas/: prompt.md
tasks/03_action/: prompt.md
tasks/04_api/: prompt.md
tasks/security_research/: prompt.md
tests/: test_blast_radius.py  test_config_parser.py  test_edge_noise_filter.py  test_schemas.py  test_violation_checker.py
